# wagtail-recurrence

./: LICENSE  Pipfile  README.md  pyproject.toml
recurrence_wagtail/: forms.py  panels.py
recurrence_wagtail/static/recurrence/css/: recurrence_wagtail.css
recurrence_wagtail/static/recurrence/js/: recurrence-widget-wagtail.js
recurrence_wagtail/templates/recurrence/: recurrence_widget_wagtail.html
